--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -10,7 +10,31 @@
                 <div class="recipe-cover">
                     <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
                 </div>
-                <h1>Oi</h1>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        João Victor
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        26/09/2022 às 10:55
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis rerum perferendis consequatur ea? Hic sint libero, enim, nemo assumenda laborum, ratione nisi cumque labore dolorum ab dolores ipsum saepe voluptates!</p>
+                </div>
+
             </div>
         </div>
     </main>
