Creating the Recipe Card / 3

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -32,9 +32,31 @@
                 </div>
 
                 <div class="recipe-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis rerum perferendis consequatur ea? Hic sint libero, enim, nemo assumenda laborum, ratione nisi cumque labore dolorum ab dolores ipsum saepe voluptates!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis rerum perferendis consequatur
+                        ea? Hic sint libero, enim, nemo assumenda laborum, ratione nisi cumque labore dolorum ab dolores
+                        ipsum saepe voluptates!</p>
                 </div>
 
+                <div class="recipe-meta-container">
+                    <div class="recipe-meta recipe-preparation">
+                        <h3 class="recipe-meta-preparation"><i class="fas fa-stopwatch"></i> Preparo</h3>
+                        <div class="recipe-meta-text">
+                            0 Minutos
+                        </div>
+                    </div>
+                    <div class="recipe-meta recipe-servings">
+                        <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
+                        <div class="recipe-meta-text">
+                            0 Porções
+                        </div>
+                    </div>
+                </div>
+                <footer class="recipe-footer">
+                    <a href="" class="recipe-read-more button button-dark button-full-width">
+                        <i class="fas fa-eye"></i>
+                        <span>ver mais...</span>
+                    </a>
+                </footer>
             </div>
         </div>
     </main>
