--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -6,60 +6,10 @@
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-            <div class="recipe recipe-list-item">
-                <div class="recipe-cover">
-                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
-                </div>
-                <div class="recipe-title-container">
-                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
-                </div>
-
-                <div class="recipe-author">
-                    <span class="recipe-author-item">
-                        <i class="fas fa-user"></i>
-                        João Victor
-                    </span>
-                    <span class="recipe-author-item">
-                        <i class="fas fa-calendar-alt"></i>
-                        26/09/2022 às 10:55
-                    </span>
-                    <span class="recipe-author-item">
-                        <a href="">
-                            <i class="fas fa-layer-group"></i>
-                            <span>Café da manhã</span>
-                        </a>
-                    </span>
-                </div>
-
-                <div class="recipe-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis rerum perferendis consequatur
-                        ea? Hic sint libero, enim, nemo assumenda laborum, ratione nisi cumque labore dolorum ab dolores
-                        ipsum saepe voluptates!</p>
-                </div>
-
-                <div class="recipe-meta-container">
-                    <div class="recipe-meta recipe-preparation">
-                        <h3 class="recipe-meta-preparation"><i class="fas fa-stopwatch"></i> Preparo</h3>
-                        <div class="recipe-meta-text">
-                            0 Minutos
-                        </div>
-                    </div>
-                    <div class="recipe-meta recipe-servings">
-                        <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
-                        <div class="recipe-meta-text">
-                            0 Porções
-                        </div>
-                    </div>
-                </div>
-                <footer class="recipe-footer">
-                    <a href="" class="recipe-read-more button button-dark button-full-width">
-                        <i class="fas fa-eye"></i>
-                        <span>ver mais...</span>
-                    </a>
-                </footer>
-            </div>
+            {% include 'recipes/partials/recipe.html' %}
         </div>
     </main>
+    {% include 'recipes/partials/footer.html' %}
 </body>
 
 </html>
